--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,9 @@
 
+div {
+	height: 50px;
+	width: 100px;
+	border: 2px solid black;
+	border-radius: 5px;
+	background-color: #308014;
+	margin: 50%;
+}
