--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,12 @@
 
 div {
-	height: 50px;
+	height: 30px;
 	width: 100px;
 	border: 2px solid black;
 	border-radius: 5px;
 	background-color: #308014;
-	margin: 40%;
-
+	margin-top: 25%;
+	margin-left: 25%;
+	margin-right: 25%;
+	margin-bottom: 25%;
 }
