--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,6 @@ div {
 	border: 2px solid black;
 	border-radius: 5px;
 	background-color: #308014;
-	margin-top: 25%;
-	margin-left: 25%;
-	margin-right: 50%;
-	margin-bottom: 25%;
+	margin: 30%;
+
 }
