--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,6 @@ div {
 	border: 2px solid black;
 	border-radius: 5px;
 	background-color: #308014;
-	margin: 30%;
-
+	margin-top: 20%;
+	margin-left:45%;
 }
