--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-div {
+#one {
 	height: 30px;
 	width: 100px;
 	border: 2px solid black;
@@ -6,7 +6,20 @@ div {
 	background-color: #308014;
 	margin-top: 2%;
 	margin-left:45%;
+	text-align: center;
+	font-size: 20px;
+	font-family: arial;
 }
+
+#two{
+    color: white;
+    margin-left:2%;
+}
+
+div{
+    display: inline-block;
+}
+
 h1 {
     margin-top:20%;
 }
